Task management API + Frontend implementation